# yo

./: Cargo.toml  README.md  example-yo.toml
.github/workflows/: TestingCI.yml
fixtures/agents/: docs.toml  patch.toml  scout.toml  test.toml
fixtures/mcp_calc_server/src/: main.rs
fixtures/mock_webapp/: Cargo.toml  README.md
fixtures/mock_webapp/src/: config.rs  lib.rs  main.rs
fixtures/mock_webapp/tests/: api_tests.rs  unit_tests.rs
src/: agent.rs  cli.rs  commands.rs  config.rs  cost.rs  llm.rs  main.rs  plan.rs  policy.rs  subagent.rs  tool_filter.rs  transcript.rs
src/mcp/: client.rs  transport.rs
src/skillpacks/: activation.rs
src/tools/: edit.rs  mod.rs  patch.rs  task.rs
validation/: README.md  run-all.sh
validation/lib/: assertions.sh  common.sh
validation/tests/01-tools/: test-patch.sh
validation/tests/10-tdd/: test-implement-to-pass.sh  test-tdd-cycle.sh  test-write-failing-test.sh
validation/tests/11-debugging/: test-find-security-issue.sh  test-fix-failing-test.sh  test-trace-error.sh
validation/tests/12-refactoring/: test-find-deprecated.sh  test-modernize-function.sh  test-rename-across-files.sh
validation/tests/13-documentation/: test-add-docs.sh  test-find-undocumented.sh  test-update-readme.sh
validation/tests/14-git/: test-create-branch.sh  test-create-commit.sh  test-git-status.sh
validation/tests/15-multi-file/: test-add-field-everywhere.sh  test-dependency-chain.sh  test-extract-module.sh
validation/tests/16-review/: test-code-review.sh  test-custom-command.sh  test-security-review.sh
(+15 files in other folders)
