[package]
name = "yo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
diffy = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
dotenvy = "0.15"
glob = "0.3"
once_cell = "1"
regex = "1"
rustyline = { version = "17", features = ["with-file-history"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yml", version = "0.0.12" }
sha2 = "0.10"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
wait-timeout = "0.2"
walkdir = "2"
shell-words = "1.1"

[dev-dependencies]
tempfile = "3"
